syntax = "proto3";
package ununifi.records;

import "ununifi/records/params.proto";
import "ununifi/records/records.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/UnUniFi/chain/x/yieldaggregator/submodules/records/types";

// GenesisState defines the records module's genesis state.
message GenesisState {
  Params                        params                       = 1 [(gogoproto.nullable) = false];
  string                        port_id                      = 2;
  repeated UserRedemptionRecord user_redemption_record_list  = 3 [(gogoproto.nullable) = false];
  uint64                        user_redemption_record_count = 4;
  repeated EpochUnbondingRecord epoch_unbonding_record_list  = 5 [(gogoproto.nullable) = false];
  repeated DepositRecord        deposit_record_list          = 7 [(gogoproto.nullable) = false];
  uint64                        deposit_record_count         = 8;
  repeated PendingDeposit       pending_deposits             = 9 [(gogoproto.nullable) = false];
}
